# sgs_tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TASKLIST.md  index.html  py-modindex.html  pyproject.toml  scripts.html  search.html  tox.ini
.doctrees/: environment.pickle  index.doctree  simple_flow.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: delete-doc-preview.yml  docs-pr.yml  docs-preview.yml  docs-regen-idx.yml  update_doc_idx.yml
_modules/sgs_tools/geometry/: tensor_algebra.html
_modules/sgs_tools/sgs/: sgs_model.html
_modules/sgs_tools/simple_flows/: SimpleShear.html
_sources/: simple_flow.rst.txt
devel/: devlog.html  genindex.html  index.html  io.html  objects.inv  physics.html  searchindex.js
devel/.doctrees/: devlog.doctree  environment.pickle  geometry.doctree  index.doctree  io.doctree  physics.doctree  plotting.doctree  scripts.doctree  sgs.doctree
devel/_modules/: index.html
doc/: conf.py  devlog.rst  diagnostics.rst  geometry.rst  index.rst  io.rst  scripts.rst  sgs.rst  simple_flow.rst
doc/.entangled/: sphinx_conf.py
doc_deploy/: .buildinfo  genindex.html  index.html  physics.html  simple_flow.html
doc_deploy/.doctrees/: environment.pickle
doc_deploy/_sources/: io.rst.txt
examples/: CS_calculation_test.ipynb  Prototype_MONC_LES.ipynb  Test_filtering.ipynb
examples/vert_levs/: vertlevs_L100_3km_1.nml  vertlevs_L200_3km.nml
preview/change_log/: .buildinfo  index.html  io.html  objects.inv  py-modindex.html  scripts.html
preview/change_log/.doctrees/: environment.pickle  index.doctree
preview/doc_deploy/: geometry.html  index.html  searchindex.js  sgs.html
preview/doc_deploy/.doctrees/: environment.pickle  geometry.doctree  index.doctree  io.doctree  scripts.doctree
preview/doc_deploy/_sources/: physics.rst.txt
preview/io_refactor/: devlog.html  objects.inv  plotting.html  scripts.html  search.html  sgs.html
preview/io_refactor/.doctrees/: diagnostics.doctree  environment.pickle  index.doctree  io.doctree  sgs.doctree
preview/io_refactor/_sources/: io.rst.txt  physics.rst.txt  plotting.rst.txt
preview/read_dispatch/: devlog.html  genindex.html  objects.inv  py-modindex.html
preview/read_dispatch/.doctrees/: environment.pickle
preview/read_dispatch/_sources/: scripts.rst.txt
preview/read_refactor/: diagnostics.html  genindex.html  geometry.html  simple_flow.html
preview/read_refactor/.doctrees/: devlog.doctree  environment.pickle  simple_flow.doctree
src/sgs_tools/: __init__.py
src/sgs_tools/diagnostics/: anisotropy.py  directional_profile.py  spectra.py
src/sgs_tools/geometry/: grid.py  staggered_grid.py  tensor_algebra.py  vector_calculus.py
src/sgs_tools/io/: monc.py  netcdf_writer.py  (+4 more)
test/: conftest.py
test/test_geometry/: test_staggered_grid.py  test_tensor_algebra.py  test_vector_calculus.py
test/test_script/: df667_800m_L63_Slicea_pr.nc  test_BasicComparisonSim.py  test_CS_calculation_genmodel.py  test_pp_UM.py  test_scripts_cli.py
test/test_sgs/: test_dynamic_coefficient.py  test_dynamic_minimisation.py  test_filter.py
test/test_spectra/: test_xrft_spectra.py
(+72 files in other folders)
