[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "SGS_tools"
dynamic = ["version"]
description = "Python tools for sub-grid scale fluid analyis"
authors = [
    {name = "Dimtar Vlaykov", email = "d.vlaykov@exeter.ac.uk"},
]

urls = {source = "https://github.com/dvlaykov/sgs_tools.git"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]

requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.6",
    "xarray[io,accel,parallel]>=2023.9",
    "xrft",
    "xarray-einstats",
    "f90nml",
    "netcdf4",
    "h5netcdf"
]

[project.optional-dependencies]
dev = [
    "tox",
    "mypy",
    "pytest",
    "ruff",
    "pint"
]
doc = [
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinx_argparse_cli",
    "sphinx-mdinclude",
    "pydata-sphinx-theme"
]
[project.scripts]
cs_dynamic = "sgs_tools.scripts.CS_calculation:main"
sim_comparison = "sgs_tools.scripts.BasicComparisonSimAnalysis:main"
ref_comparison = "sgs_tools.scripts.ReferenceComparisonSimAnalysis:main"

um_levels = "sgs_tools.scripts.make_UM_level_sets:main"

[tool.setuptools_scm]